--- a/public/index.html
+++ b/public/index.html
@@ -18,22 +18,14 @@
   </header>
 
   <main class="w-75 mx-auto">
-    <div id="lista-documentos" class="list-group mb-4">
-      <a href="document.html?nome=JavaScript" class="list-group-item list-group-item-action">
-        JavaScript
-      </a>
-      <a href="document.html?nome=Node" class="list-group-item list-group-item-action">
-        Node
-      </a>
-      <a href="document.html?nome=Socket.io" class="list-group-item list-group-item-action">
-        Socket.io
-      </a>
+    <div id="documents-list" class="list-group mb-4">
+
     </div>
 
-    <form id="form-adiciona-documento" class="row g-3">
+    <form id="add-document-form" class="row g-3">
       <div class="col-md-6">
-        <label class="visually-hidden" for="input-documento">Nome do documento</label>
-        <input type="text" class="form-control" id="input-documento" placeholder="Documento..." required>
+        <label class="visually-hidden" for="input-document">Nome do documento</label>
+        <input type="text" class="form-control" id="input-document" placeholder="Documento..." required>
       </div>
 
       <div class="col-md-6">
@@ -45,6 +37,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="index.js" type="module"></script>
 </body>
 
 </html>
