--- a/public/document.html
+++ b/public/document.html
@@ -8,21 +8,24 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
   <title>Documento</title>
 </head>
 
-<body class="mt-3">
+<body class="bg-dark text-white border-top border-warning" style="font-family: 'Open Sans', sans-serif; border-top-width: 10px;">
   <header>
-    <h1 class="display-4 mb-4 text-center" id="document-title">Documento sem título</h1>
+    <h1 class="display-5 mt-4 mb-4 text-center" id="document-title" style="text-transform: uppercase;">Documento sem título</h1>
   </header>
 
-  <main class="w-75 mx-auto">
-    <textarea id="text-editor" class="form-control mb-4" style="height: 400px; resize: none;"></textarea>
+  <main class="w-50 mx-auto">
+    <textarea id="text-editor" class="form-control mb-4 bg-secondary text-white" style="height: 400px; resize: none;"></textarea>
 
     <div class="d-flex justify-content-between">
-      <a href="index.html" class="btn btn-primary">Voltar</a>
-      <button id="excluir-documento" class="btn btn-outline-danger">Excluir documento</button>
+      <a href="index.html" class="btn btn-warning">Voltar</a>
+      <button id="delete-document" class="btn btn-outline-danger">Excluir documento</button>
     </div>
   </main>
 
